# lifer

./: Cargo.toml
.github/workflows/: ci.yaml
assets/items/: money.item.ron  potion.item.ron  raw_food.item.ron
src/: character.rs  game_state.rs  loading.rs  main.rs  main_menu.rs  mechanics.rs  player.rs  raycast.rs  selectable.rs  splash_screen.rs
src/character/: inventory.rs  movement.rs
src/mechanics/: field.rs  house.rs  item.rs  market.rs
src/mechanics/item/: asset.rs  consumable.rs  containter.rs  spawn.rs
src/player/: inventory.rs  time.rs
