[package]
name = "lifer"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
default = []

[dependencies]
bevy = { version = "0.12.1", features = [
    "wayland",
] }
