[package]
name = "lifer"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
default = []

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"

[dependencies]
bevy = { version = "0.12.1", features = [
    "wayland",
] }
bevy_egui = "0.24"
big-brain = { git = "https://github.com/PlagueAutomata/big-brain", rev = "aed238e" }
