[package]
name = "lifer"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
default = []

[dependencies]
bevy = { version = "0.12.1", features = [
    "wayland",
] }
bevy_egui = "0.24"
big-brain = { git = "https://github.com/PlagueAutomata/big-brain", rev = "aed238e" }

serde = { version = "1", features = ["derive"] }
ron = "0.8"
bevy_asset_loader = { version = "0.19.1", features = ["progress_tracking"] }
iyes_progress = "0.10"

rand = { version = "0.8", features = ["small_rng"] }